--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2669,7 +2669,7 @@ ul.product-tags li a {
   .wrapper-full {
     margin-bottom: 0px;
   }
-  section.section-container {
+  section.margin__b_works {
     margin-bottom: 10%;
   }
   .c-col-8 {
