Tablet Responsive Update

--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -16922,6 +16922,15 @@ ul.product-tags li a {
   display: block;
 }
 @media screen and (max-width: 991px) {
+  #footer .footer-flex {
+    border-top: 1px solid #0d182c;
+  }
+  .dark-footer .footer-flex {
+    border-top: 1px solid #fff !important;
+  }
+  #footer .footer-right {
+    padding-top: 30px;
+  }
   #footer {
     padding-top: 5vh;
   }
@@ -18907,7 +18916,7 @@ lack-strock .marquees__part {
   display: none;
 }
 .dark-footer .footer-flex {
-  border-top: 0px solid #fff !important;
+  border-top: 1px solid #fff !important;
 }
 @media screen and (max-width: 1920px) {
   .lets .flex-row h1 {
@@ -18930,8 +18939,32 @@ lack-strock .marquees__part {
   }
 }
 @media screen and (max-width: 991px) {
+  #services .accordion-title h2 {
+    letter-spacing: 3px;
+    -webkit-text-fill-color: #2b2b2b;
+    -webkit-text-stroke-color: #ffffff;
+    -webkit-text-stroke: 0.4px;
+    /* stroke: #ffffff; */
+    color: #2b2b2b;
+  }
   .w-hde {
     display: block;
+  }
+  .c-hm-us_s2 {
+    padding-top: 7em;
+    padding-bottom: 7em;
+  }
+  .o-media {
+    border-radius: 0.75em;
+  }
+  .o-media.hm-us {
+    height: auto;
+    padding-top: 20%;
+  }
+  .c-hm-us_top {
+    display: block;
+    padding-top: 5em;
+    grid-auto-columns: 4fr;
   }
   #footer .top-f {
     text-align: left;
