--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1103,7 +1103,7 @@ lack-strock .marquees__part {
   display: none;
 }
 .dark-footer .footer-flex {
-  border-top: 0px solid #fff !important;
+  border-top: 1px solid #fff !important;
 }
 @media screen and (max-width: 1920px) {
   .lets .flex-row h1 {
@@ -1126,8 +1126,32 @@ lack-strock .marquees__part {
   }
 }
 @media screen and (max-width: 991px) {
+  #services .accordion-title h2 {
+    letter-spacing: 3px;
+    -webkit-text-fill-color: #2b2b2b;
+    -webkit-text-stroke-color: #ffffff;
+    -webkit-text-stroke: 0.4px;
+    /* stroke: #ffffff; */
+    color: #2b2b2b;
+  }
   .w-hde {
     display: block;
+  }
+  .c-hm-us_s2 {
+    padding-top: 7em;
+    padding-bottom: 7em;
+  }
+  .o-media {
+    border-radius: 0.75em;
+  }
+  .o-media.hm-us {
+    height: auto;
+    padding-top: 20%;
+  }
+  .c-hm-us_top {
+    display: block;
+    padding-top: 5em;
+    grid-auto-columns: 4fr;
   }
 
   #footer .top-f {
