--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -393,6 +393,15 @@
 }
 
 @media screen and (max-width: 991px) {
+  #footer .footer-flex {
+    border-top: 1px solid #0d182c;
+  }
+  .dark-footer .footer-flex {
+    border-top: 1px solid #fff !important;
+  }
+  #footer .footer-right {
+    padding-top: 30px;
+  }
   #footer {
     padding-top: 5vh;
   }
