--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1755,7 +1755,29 @@ section.horizontal .animation-wrap.to-left {
     // opacity: 0;
   }
 }
+
+@media screen and (max-width: 1180px) {
+  .ser-hero .top-h .h1-r {
+    margin-left: 55%;
+  }
+  .flex-cen {
+    justify-content: center;
+  }
+  .ser-two .item p {
+    text-align: left;
+  }
+  .ser-hero .top-h .strategy__head {
+    margin-left: 40%;
+  }
+  .ser-hero .top-h .tech__head {
+    margin-left: 2%;
+  }
+}
+
 @media screen and (max-width: 991px) {
+  .ser-hero .top-h .tech__head {
+    margin-left: 16%;
+  }
   .ser-two {
     display: none;
   }
@@ -2237,9 +2259,7 @@ section.horizontal .animation-wrap.to-left {
   .ser-hero .top-h .h1-r {
     text-align: end;
   }
-  .dark-footer .footer-flex {
-    border-top: 1px solid #fff !important;
-  }
+
   .ser-hero .top-h {
     padding: 0px 9px;
   }
