--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -4369,6 +4369,9 @@ header {
   .mobli-cont .lapi-content p {
     color: #fff;
   }
+  .m-hide {
+    display: none;
+  }
 }
 @media screen and (max-width: 767px) {
   .mobl {
